# rpccaps

./: Cargo.toml  README.md
rpccaps/: Cargo.toml
rpccaps/src/: error.rs  lib.rs
rpccaps/src/data/: bytes.rs  capability.rs  mod.rs  reference.rs  signature.rs  tls.rs  validate.rs
rpccaps/src/rpc/: codec.rs  config.rs  dispatch.rs  message.rs  mod.rs  multiplex.rs  server.rs  service.rs  transport.rs
rpccaps/src/services/: auth.rs  mod.rs
rpccaps_derive/: Cargo.toml
rpccaps_derive/src/: client.rs  lib.rs  method.rs  service.rs  utils.rs
