[package]
name = "rpccaps"
version = "0.1.0"
authors = ["bkfox <thomas bkfox net>"]
edition = "2018"
description = "Capabilities based rpc system."

[features]
default = ["network"]
network = ["quinn", "rcgen"]
plugins = []

[dependencies]
rpccaps_derive = { path = "../rpccaps_derive" }

async-bincode = "0.6"
bincode="1.3"
bytes = "1.1"
byteorder = "1.3"
serde= { version="1.0", features=["derive"] }
uuid = { version = "0.8", features = ["serde", "v5"] }

rand_core={ version="0.5", features = ["std", "getrandom"] }
signature={ version="1.2", features = ["std"] }
ed25519="1.2"
ed25519-dalek="1.0"

futures="0.3"
futures-util = "0.3"
async-trait = "0.1"
tokio = { version="1.11", features=["io-util", "rt"] }
tokio-util = { version="0.6", features=["codec"] }

rcgen = { version = "0.8", optional = true }
quinn = { version = "0.7", optional = true }

