[package]
name = "rpccaps"
version = "0.1.0"
authors = ["bkfox <thomas bkfox net>"]
edition = "2018"
description = "Capabilities based rpc system."

[features]
default = ["network"]
network = ["quinn", "rcgen", "rustls", "rustls-pemfile"]
plugins = []

[dependencies]
rpccaps_derive = { path = "../rpccaps_derive" }

async-bincode = "0.6"
bincode="1.3"
bytes = "1.1"
byteorder = "1.3"
serde= { version="1.0", features=["derive"] }
uuid = { version = "0.8", features = ["serde", "v5"] }

rand_core={ version="0.5", features = ["std", "getrandom"] }
signature={ version="1.2", features = ["std"] }
ed25519="1.2"
ed25519-dalek="1.0"

futures="0.3"
futures-util = "0.3"
async-trait = "0.1"
tokio = { version="1.21", features=["io-util", "rt", "rt-multi-thread"] }
tokio-util = { version="0.6", features=["codec"] }

quinn = { version = "0.8", optional = true }
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
rcgen = { version = "0.8", optional = true }

